fixed mobile font sizes for header/footer on smaller devices

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -8,7 +8,8 @@
 
 footer {
     margin-top: auto;
-    flex-shrink: 0;
+    flex-shrink: 1;
+    font-size: 100%;
 }
 
 #footer {
