--- a/_sass/layout/_tiles.scss
+++ b/_sass/layout/_tiles.scss
@@ -15,6 +15,12 @@
     align-items: stretch;
 }
 
+@include breakpoint(small) {
+    .card-container {
+        width: 100%;
+    }
+}
+
 .date-style {
     margin-bottom: 20px !important;
 }
